--- a/css/main.css
+++ b/css/main.css
@@ -95,11 +95,6 @@ img {
   list-style: none;
 }
 
-.section, .hero, .our-benefits, .our-expertise, .our-team, .our-clients, .portfolio {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-
 .visually-hidden, .our-benefits__secondary-header, .portfolio__main-header {
   display: none;
 }
@@ -116,28 +111,6 @@ img {
   display: inline-block;
 }
 
-.container, .page-header__header, .our-benefits__container, .our-expertise__container, .our-team__container, .our-clients__container, .portfolio__container, .footer__container {
-  width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin: 0 auto;
-  display: flex;
-}
-
-.secondary-header, .our-benefits__secondary-header, .our-expertise__secondary-header, .our-team__secondary-header, .our-clients__secondary-header {
-  color: var(--header-color);
-  font-weight: bold;
-  font-size: 36px;
-  line-height: 1.17;
-  text-align: center;
-  margin-bottom: 50px;
-}
-
-.secondary-header--modal {
-  font-size: 20px;
-  margin-bottom: 12px;
-}
-
 .anchor, .site-nav__anchor, .site-nav__anchor--active, .auth-nav__anchor, .client-block__anchor {
   color: var(--main-color);
   text-decoration: none;
@@ -146,6 +119,52 @@ img {
 
 .anchor:hover, .site-nav__anchor:hover, .site-nav__anchor--active:hover, .auth-nav__anchor:hover, .client-block__anchor:hover, .anchor:focus, .site-nav__anchor:focus, .site-nav__anchor--active:focus, .auth-nav__anchor:focus, .client-block__anchor:focus, .anchor.active, .active.site-nav__anchor, .active.site-nav__anchor--active, .active.auth-nav__anchor, .active.client-block__anchor {
   color: var(--brand-color);
+}
+
+.section, .hero, .our-benefits, .our-expertise, .our-team, .our-clients, .portfolio {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.container, .page-header__header, .our-benefits__container, .our-expertise__container, .our-team__container, .our-clients__container, .portfolio__container, .footer__container {
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
+}
+
+.secondary-header, .our-benefits__secondary-header, .our-expertise__secondary-header, .our-team__secondary-header, .our-clients__secondary-header {
+  color: var(--header-color);
+  font-weight: bold;
+  font-size: 28px;
+  line-height: 1.14;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.secondary-header--modal {
+  font-size: 20px;
+  margin-bottom: 12px;
+}
+
+@media screen and (min-width: 768px) {
+  .container, .page-header__header, .our-benefits__container, .our-expertise__container, .our-team__container, .our-clients__container, .portfolio__container, .footer__container {
+    display: flex;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .section, .hero, .our-benefits, .our-expertise, .our-team, .our-clients, .portfolio {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+  .container, .page-header__header, .our-benefits__container, .our-expertise__container, .our-team__container, .our-clients__container, .portfolio__container, .footer__container {
+    width: 1200px;
+  }
+  .secondary-header, .our-benefits__secondary-header, .our-expertise__secondary-header, .our-team__secondary-header, .our-clients__secondary-header {
+    font-size: 36px;
+    line-height: 1.17;
+    margin-bottom: 50px;
+  }
 }
 
 .button, .modal-btn {
@@ -220,10 +239,6 @@ img {
   margin-bottom: 10px;
 }
 
-.list-item, .benefit-item, .filters-list__item {
-  display: inline-block;
-}
-
 .icon, .social-media__icon, .social-media-item__icon {
   color: var(--icon-grey);
   height: 20px;
@@ -239,9 +254,15 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+@media screen and (min-width: 1200px) {
+  .list-item, .benefit-item, .filters-list__item {
+    display: inline-block;
+  }
+}
+
 .logo {
   font-family: "Raleway";
-  font-size: 26px;
+  font-size: 24px;
   text-decoration: none;
   line-height: 1.17;
   color: var(--brand-color);
@@ -257,6 +278,12 @@ img {
 
 .logo--footer {
   padding-bottom: 20px;
+}
+
+@media screen and (min-width: 1200px) {
+  .logo {
+    font-size: 26px;
+  }
 }
 
 .page-header {
