--- a/sass/components/_atoms.scss
+++ b/sass/components/_atoms.scss
@@ -16,10 +16,6 @@
   line-height: 1.14;
   margin-bottom: 10px;
 }
-
-.list-item {
-  display: inline-block;
-}
 .icon {
   color: var(--icon-grey);
   height: 20px;
@@ -33,4 +29,10 @@
   border-radius: 50%;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: $desktop) {
+  .list-item {
+    display: inline-block;
+  }
 }
