--- a/sass/components/_global.scss
+++ b/sass/components/_global.scss
@@ -1,11 +1,6 @@
 .list {
   list-style: none;
 }
-
-.section {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
 .visually-hidden {
   display: none;
 }
@@ -20,27 +15,6 @@
   display: inline-block;
 }
 
-.container {
-  width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin: 0 auto;
-  display: flex;
-}
-
-.secondary-header {
-  color: var(--header-color);
-  font-weight: bold;
-  font-size: 36px;
-  line-height: 1.17;
-  text-align: center;
-  margin-bottom: 50px;
-
-  &--modal {
-    font-size: 20px;
-    margin-bottom: 12px;
-  }
-}
 .anchor {
   color: var(--main-color);
   text-decoration: none;
@@ -50,5 +24,51 @@
   &:focus,
   &.active {
     color: var(--brand-color);
+  }
+}
+
+.section {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.container {
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
+}
+
+.secondary-header {
+  color: var(--header-color);
+  font-weight: bold;
+  font-size: 28px;
+  line-height: 1.14;
+  text-align: center;
+  margin-bottom: 30px;
+
+  &--modal {
+    font-size: 20px;
+    margin-bottom: 12px;
+  }
+}
+
+@media screen and (min-width: $tablet) {
+  .container {
+    display: flex;
+  }
+}
+
+@media screen and (min-width: $desktop) {
+  .section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+  .container {
+    width: 1200px;
+  }
+  .secondary-header {
+    font-size: 36px;
+    line-height: 1.17;
+    margin-bottom: 50px;
   }
 }
