--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,6 +1,6 @@
 .logo {
   font-family: $logoFont;
-  font-size: 26px;
+  font-size: 24px;
   text-decoration: none;
   line-height: 1.17;
   color: var(--brand-color);
@@ -14,5 +14,11 @@
   }
   &--footer {
     padding-bottom: 20px;
+  }
+}
+
+@media screen and (min-width: $desktop) {
+  .logo {
+    font-size: 26px;
   }
 }
