Refactor header styles

--- a/css/main.css
+++ b/css/main.css
@@ -288,20 +288,11 @@ img {
 
 .page-header {
   border-bottom: 1px solid #ececec;
-  padding: 24px 0 25px;
-}
-
-.page-header__header {
-  align-items: center;
-  justify-content: space-between;
-}
-
-.page-header__navigation {
-  display: flex;
-  align-items: center;
+  padding: 10px 0;
 }
 
 .site-nav {
+  display: none;
   margin-left: 93px;
 }
 
@@ -312,7 +303,7 @@ img {
 }
 
 .site-nav__anchor--active::after {
-  content: "";
+  content: '';
   width: 100%;
   height: 4px;
   background-color: var(--brand-color);
@@ -322,7 +313,8 @@ img {
 }
 
 .auth-nav {
-  display: flex;
+  display: none;
+  /*  display: flex;*/
 }
 
 .auth-nav__menu-item {
@@ -339,6 +331,30 @@ img {
 .auth-nav__button-icon {
   fill: currentColor;
   margin-right: 10px;
+}
+
+@media screen and (min-width: 768px) {
+  .page-header {
+    padding: 21px 0;
+  }
+  .page-header__header {
+    align-items: center;
+    justify-content: space-between;
+  }
+  .page-header__navigation {
+    display: flex;
+    align-items: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .page-header {
+    padding: 24px 0 25px;
+  }
+  .site-nav,
+  .auth-nav {
+    display: block;
+  }
 }
 
 .hero {
