--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,63 +1,83 @@
 .page-header {
-    border-bottom: 1px solid #ececec;
-    padding: 24px 0 25px;
+  border-bottom: 1px solid #ececec;
+  padding: 10px 0;
 
-    &__header {
-        @extend .container;
-        align-items: center;
-        justify-content: space-between;
-    }
-    &__navigation {
-        display: flex;
-        align-items: center;
-    }
+  &__header {
+    @extend .container;
+  }
 }
 
 .site-nav {
-    @extend .list;
-    margin-left: 93px;
+  display: none;
+  @extend .list;
+  margin-left: 93px;
 
-    &__menu-item {
-        margin-right: 50px;
-        display: inline-block;
-        font-weight: 500;
+  &__menu-item {
+    margin-right: 50px;
+    display: inline-block;
+    font-weight: 500;
+  }
+
+  &__anchor {
+    @extend .anchor;
+
+    &--active {
+      @extend .anchor;
+
+      &::after {
+        content: '';
+        width: 100%;
+        height: 4px;
+        background-color: var(--brand-color);
+        display: block;
+        border-radius: 2px;
+        transform: translateY(27px);
+      }
     }
-
-    &__anchor {
-        @extend .anchor;
-
-        &--active {
-            @extend .anchor;
-
-            &::after {
-                content: "";
-                width: 100%;
-                height: 4px;
-                background-color: var(--brand-color);
-                display: block;
-                border-radius: 2px;
-                transform: translateY(27px);
-            }
-        }
-    }
+  }
 }
 
 .auth-nav {
-    @extend .list;
-    display: flex;
+  display: none;
+  @extend .list;
+  /*  display: flex;*/
 
-    &__menu-item {
-        display: inline-block;
-        font-weight: 500;
-        margin-left: 50px;
+  &__menu-item {
+    display: inline-block;
+    font-weight: 500;
+    margin-left: 50px;
+  }
+  &__anchor {
+    @extend .anchor;
+    display: flex;
+    align-items: center;
+  }
+  &__button-icon {
+    fill: currentColor;
+    margin-right: 10px;
+  }
+}
+
+@media screen and (min-width: $tablet) {
+  .page-header {
+    padding: 21px 0;
+
+    &__header {
+      align-items: center;
+      justify-content: space-between;
     }
-    &__anchor {
-        @extend .anchor;
-        display: flex;
-        align-items: center;
+    &__navigation {
+      display: flex;
+      align-items: center;
     }
-    &__button-icon {
-        fill: currentColor;
-        margin-right: 10px;
-    }
+  }
+}
+@media screen and (min-width: $desktop) {
+  .page-header {
+    padding: 24px 0 25px;
+  }
+  .site-nav,
+  .auth-nav {
+    display: block;
+  }
 }
