--- a/css/main.css
+++ b/css/main.css
@@ -360,28 +360,43 @@ img {
 .hero {
   background-color: #c4c4c4;
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero-image.jpg");
-  max-width: 1600px;
+  background-size: cover;
+  background-position: center;
+  height: 46vw;
+  width: 100%;
   padding: 0;
   margin: 0 auto;
-}
-
-.hero__full-width {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  min-height: 600px;
 }
 
 .hero__main-header {
   color: var(--white);
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
+  font-size: 26px;
+  line-height: 1.62;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  max-width: 696px;
+  max-width: 90%;
+}
+
+@media screen and (min-width: 1200px) {
+  .hero {
+    width: initial;
+    height: initial;
+    max-width: 1600px;
+  }
+  .hero__full-width {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height: 600px;
+  }
+  .hero__main-header {
+    font-size: 44px;
+    line-height: 1.36;
+    max-width: 696px;
+  }
 }
 
 .our-benefits {
