--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,26 +1,47 @@
 .hero {
-    @extend .section;
-    background-color: #c4c4c4;
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero-image.jpg");
+  @extend .section;
+  background-color: #c4c4c4;
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url('../images/hero-image.jpg');
+  background-size: cover;
+  background-position: center;
+  height: 46vw;
+  width: 100%;
+  padding: 0;
+  margin: 0 auto;
+
+  &__main-header {
+    color: var(--white);
+    font-weight: 900;
+    font-size: 26px;
+    line-height: 1.62;
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+    max-width: 90%;
+  }
+}
+
+@media screen and (min-width: $desktop) {
+  .hero {
+    width: initial;
+    height: initial;
     max-width: 1600px;
-    padding: 0;
-    margin: 0 auto;
 
     &__full-width {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        min-height: 600px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      min-height: 600px;
     }
     &__main-header {
-        color: var(--white);
-        font-weight: 900;
-        font-size: 44px;
-        line-height: 1.36;
-        text-align: center;
-        letter-spacing: 0.06em;
-        text-transform: uppercase;
-        max-width: 696px;
+      font-size: 44px;
+      line-height: 1.36;
+      max-width: 696px;
     }
+  }
 }
