--- a/css/main[Conflict].css
+++ b/css/main[Conflict].css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 :root {
   --brand-color: #2196f3;
   --brand-color-hover: #188ce8;
@@ -92,7 +91,7 @@ img {
   display: block;
 }
 
-.list, .navigation__site-nav, .navigation__auth-nav, .navigation__social-networks-list, .our-benefits__list, .our-expertise__list, .our-team__list, .social-media, .our-clients__list, .filters-list, .project-thumbnails, .footer__social-media-icons, .contacts {
+.list, .navigation__site-nav, .navigation__auth-nav, .our-benefits__list, .our-expertise__list, .our-team__list, .social-media, .our-clients__list, .filters-list, .project-thumbnails, .footer__social-media-icons, .contacts {
   list-style: none;
 }
 
@@ -112,13 +111,13 @@ img {
   display: inline-block;
 }
 
-.anchor, .navigation__site-nav-anchor, .navigation__auth-nav-anchor, .navigation__social-networks-list-anchor, .client-block__anchor {
+.anchor, .navigation__site-nav-anchor, .navigation__auth-nav-anchor, .client-block__anchor {
   color: var(--main-color);
   text-decoration: none;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.anchor:hover, .navigation__site-nav-anchor:hover, .navigation__auth-nav-anchor:hover, .navigation__social-networks-list-anchor:hover, .client-block__anchor:hover, .anchor:focus, .navigation__site-nav-anchor:focus, .navigation__auth-nav-anchor:focus, .navigation__social-networks-list-anchor:focus, .client-block__anchor:focus, .anchor.active, .active.navigation__site-nav-anchor, .active.navigation__auth-nav-anchor, .active.navigation__social-networks-list-anchor, .active.client-block__anchor {
+.anchor:hover, .navigation__site-nav-anchor:hover, .navigation__auth-nav-anchor:hover, .client-block__anchor:hover, .anchor:focus, .navigation__site-nav-anchor:focus, .navigation__auth-nav-anchor:focus, .client-block__anchor:focus, .anchor.active, .active.navigation__site-nav-anchor, .active.navigation__auth-nav-anchor, .active.client-block__anchor {
   color: var(--brand-color);
 }
 
@@ -291,6 +290,22 @@ img {
   }
 }
 
+.js-open-menu {
+  display: block;
+}
+
+.js-close-menu {
+  display: none;
+}
+
+.is-open .js-open-menu {
+  display: none;
+}
+
+.is-open .js-close-menu {
+  display: block;
+}
+
 .page-header {
   border-bottom: 1px solid #ececec;
   padding: 10px 0;
@@ -321,9 +336,8 @@ img {
 .is-open .navigation {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   height: calc(100vh - 20px);
-  padding: 25px 38px 38px 25px;
+  padding: 25px 38px 0 25px;
 }
 
 .is-open .navigation__site-nav {
@@ -334,49 +348,12 @@ img {
   font-weight: 500;
 }
 
-.navigation__auth-nav-item {
-  font-size: 24px;
-}
-
-.navigation__auth-nav-item:last-child {
+.navigation__auth-nav-item:first-child {
   font-size: 34px;
 }
 
 .navigation__site-nav-anchor, .navigation__auth-nav-anchor {
   color: var(--header-color);
-}
-
-.navigation__site-nav-anchor--active {
-  color: var(--brand-color);
-}
-
-.navigation__auth-nav-anchor--phone {
-  color: var(--brand-color);
-  font-weight: 500;
-}
-
-.navigation__auth-nav {
-  display: flex;
-  flex-direction: column-reverse;
-}
-
-.navigation__button-icon {
-  display: none;
-}
-
-.navigation__social-networks-list-item {
-  display: inline-block;
-  margin-top: 64px;
-}
-
-.navigation__social-networks-list-item:not(:last-child)::after {
-  content: '｜';
-  color: var(--header-color);
-  opacity: 0.2;
-}
-
-.navigation__social-networks-list-anchor {
-  color: var(--brand-color);
 }
 
 @media screen and (min-width: 768px) {
@@ -414,6 +391,7 @@ img {
     transform: translateY(27px);
   }
   .navigation__auth-nav {
+    display: flex;
     flex-direction: column;
   }
   .navigation__auth-nav-anchor {
@@ -421,17 +399,10 @@ img {
     align-items: center;
     font-size: 12px;
     line-height: 1.6;
-    color: var(--main-color);
-  }
-  .navigation__auth-nav-anchor--phone {
-    font-weight: normal;
   }
   .navigation__button-icon {
     fill: currentColor;
     margin-right: 10px;
-  }
-  .navigation__social-networks-list {
-    display: none;
   }
 }
 
@@ -464,22 +435,6 @@ img {
     width: 10px;
     height: 16px;
   }
-}
-
-.js-open-menu {
-  display: block;
-}
-
-.js-close-menu {
-  display: none;
-}
-
-.is-open .js-open-menu {
-  display: none;
-}
-
-.is-open .js-close-menu {
-  display: block;
 }
 
 .hero {
