--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -13,6 +13,14 @@
   padding: 0;
   margin: 0 auto;
 
+  &__full-width {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height: 46vw;
+  }
+
   &__main-header {
     color: var(--white);
     font-weight: 900;
@@ -21,7 +29,7 @@
     text-align: center;
     letter-spacing: 0.06em;
     text-transform: uppercase;
-    max-width: 90%;
+    max-width: 400px;
   }
 }
 
@@ -31,17 +39,13 @@
     height: initial;
     max-width: 1600px;
 
-    &__full-width {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      min-height: 600px;
-    }
     &__main-header {
       font-size: 44px;
       line-height: 1.36;
       max-width: 696px;
+    }
+    &__full-width {
+      min-height: 600px;
     }
   }
 }
