--- a/sass/components/_what-we-do.scss
+++ b/sass/components/_what-we-do.scss
@@ -1,41 +1,47 @@
 .our-expertise {
-    @extend .section;
+  @extend .section;
+  display: none;
 
-    &__container {
-        @extend .container;
-        flex-direction: column;
-        align-items: center;
-    }
-    &__secondary-header {
-        @extend .secondary-header;
-    }
-    &__list {
-        @extend .list;
-        display: flex;
-    }
+  &__container {
+    @extend .container;
+    flex-direction: column;
+    align-items: center;
+  }
+  &__secondary-header {
+    @extend .secondary-header;
+  }
+  &__list {
+    @extend .list;
+    display: flex;
+  }
 }
 .our-expertise-item {
-    &:not(:last-child) {
-        margin-right: 30px;
-    }
-    &__img-wrapper {
-        position: relative;
-        overflow: hidden;
-    }
-    &__overlay {
-        position: absolute;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        overflow: auto;
-        bottom: 0;
-        width: 100%;
-        height: 70px;
-        color: var(--white);
-        background-color: rgba(47, 48, 58, 0.8);
-        font-size: 14px;
-        line-height: 1.14;
-        font-weight: bold;
-        text-transform: uppercase;
-    }
+  &:not(:last-child) {
+    margin-right: 30px;
+  }
+  &__img-wrapper {
+    position: relative;
+    overflow: hidden;
+  }
+  &__overlay {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: auto;
+    bottom: 0;
+    width: 100%;
+    height: 70px;
+    color: var(--white);
+    background-color: rgba(47, 48, 58, 0.8);
+    font-size: 14px;
+    line-height: 1.14;
+    font-weight: bold;
+    text-transform: uppercase;
+  }
+}
+@media screen and (min-width: $desktop) {
+  .our-expertise {
+    display: block;
+  }
 }
