--- a/css/main.css
+++ b/css/main.css
@@ -638,22 +638,17 @@ img {
   background-color: var(--light-grey);
 }
 
-.our-team__container {
-  flex-direction: column;
-  align-items: center;
-}
-
-.our-team__list {
-  display: flex;
-}
-
 .our-team-card {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
 
 .our-team-card:not(:last-child) {
-  margin-right: 30px;
+  margin-bottom: 30px;
+}
+
+.our-team-card__image {
+  width: 100%;
 }
 
 .person-caption {
@@ -689,6 +684,39 @@ img {
 
 .social-media__logo {
   fill: currentColor;
+}
+
+@media screen and (min-width: 768px) {
+  .our-team__container {
+    flex-direction: column;
+    align-items: center;
+  }
+  .our-team__list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .our-team-card {
+    width: calc(50% - 15px);
+  }
+  .our-team-card:nth-child(n + 3) {
+    margin-bottom: 0;
+  }
+  .our-team-card:nth-child(odd) {
+    margin-right: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .our-team-card {
+    width: initial;
+  }
+  .our-team-card:not(:last-child) {
+    margin-right: 30px;
+  }
+  .our-team-card:not(:last-child) {
+    margin-bottom: 0;
+  }
 }
 
 .our-clients__container {
