--- a/css/main.css
+++ b/css/main.css
@@ -726,15 +726,20 @@ img {
 .our-clients__list {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
 }
 
 .client-block {
-  width: 170px;
+  width: calc(50% - 15px);
   height: 92px;
 }
 
-.client-block:not(:last-child) {
+.client-block:nth-child(odd) {
   margin-right: 30px;
+}
+
+.client-block:nth-child(-n + 4) {
+  margin-bottom: 30px;
 }
 
 .client-block__anchor {
@@ -759,6 +764,40 @@ img {
 .client-block__logo {
   fill: var(--icon-grey);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 768px) {
+  .client-block {
+    width: calc(33.33% - 20px);
+    height: 92px;
+  }
+  .client-block:nth-child(odd) {
+    margin-right: 0;
+  }
+  .client-block:not(:nth-child(3n)) {
+    margin-right: 30px;
+  }
+  .client-block:nth-child(-n + 4) {
+    margin-bottom: initial;
+  }
+  .client-block:nth-child(-n + 3) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .our-clients__list {
+    flex-wrap: nowrap;
+  }
+  .client-block:nth-child(-n + 3) {
+    margin-bottom: initial;
+  }
+  .client-block:not(:nth-child(3n)) {
+    margin-right: initial;
+  }
+  .client-block:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 
 .portfolio__container {
