--- a/sass/components/_our-loyal-clients.scss
+++ b/sass/components/_our-loyal-clients.scss
@@ -12,16 +12,21 @@
     @extend .list;
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
   }
 }
 
 .client-block {
-  width: 170px;
+  width: calc(50% - 15px);
   height: 92px;
 
-  &:not(:last-child) {
+  &:nth-child(odd) {
     margin-right: 30px;
   }
+  &:nth-child(-n + 4) {
+    margin-bottom: 30px;
+  }
+
   &__anchor {
     @extend .anchor;
     border: 1px solid #afb1b8;
@@ -45,5 +50,43 @@
   &__logo {
     fill: var(--icon-grey);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+}
+@media screen and (min-width: $tablet) {
+  .client-block {
+    width: calc(33.33% - 20px);
+    height: 92px;
+
+    &:nth-child(odd) {
+      margin-right: 0;
+    }
+
+    &:not(:nth-child(3n)) {
+      margin-right: 30px;
+    }
+    &:nth-child(-n + 4) {
+      margin-bottom: initial;
+    }
+    &:nth-child(-n + 3) {
+      margin-bottom: 30px;
+    }
+  }
+}
+
+@media screen and (min-width: $desktop) {
+  .our-clients__list {
+    flex-wrap: nowrap;
+  }
+  .client-block {
+    &:nth-child(-n + 3) {
+      margin-bottom: initial;
+    }
+
+    &:not(:nth-child(3n)) {
+      margin-right: initial;
+    }
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
   }
 }
