--- a/css/main.css
+++ b/css/main.css
@@ -880,13 +880,21 @@ img {
   padding: 60px 15px;
 }
 
+.footer__logo-address {
+  text-align: center;
+  margin-bottom: 60px;
+}
+
 .footer__address {
   font-style: normal;
   color: var(--white);
 }
 
 .footer__social-media {
-  margin-left: 70px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 60px;
 }
 
 .footer__caption {
@@ -896,6 +904,10 @@ img {
   margin-bottom: 20px;
 }
 
+.footer__caption--centered {
+  text-align: center;
+}
+
 .footer__social-media-icons {
   display: flex;
 }
@@ -903,7 +915,6 @@ img {
 .footer__subscription {
   display: flex;
   flex-direction: column;
-  margin-left: 93px;
 }
 
 .contacts__item {
@@ -943,11 +954,14 @@ img {
 
 .subscription-form {
   display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .subscription-form__email-input-field {
-  width: 358px;
+  width: 100%;
   height: 50px;
+  margin-bottom: 20px;
   background-color: transparent;
   color: rgba(255, 255, 255, 0.6);
   font-size: 16px;
@@ -960,6 +974,49 @@ img {
 .subscription-form__email-input-field:hover, .subscription-form__email-input-field:focus {
   color: var(--white);
   border-color: var(--white);
+}
+
+@media screen and (min-width: 768px) {
+  .footer__container {
+    flex-direction: column;
+    align-items: center;
+  }
+  .footer__wrapper {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+  }
+  .footer__subscription {
+    width: 450px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__container {
+    flex-direction: row;
+    align-items: flex-start;
+  }
+  .footer__wrapper {
+    width: initial;
+  }
+  .footer__logo-address {
+    text-align: initial;
+  }
+  .footer__social-media {
+    margin-left: 70px;
+    align-items: flex-start;
+  }
+  .footer__subscription {
+    margin-left: 93px;
+    align-items: flex-start;
+  }
+  .subscription-form {
+    flex-direction: row;
+    align-items: flex-start;
+  }
+  .subscription-form__email-input-field {
+    width: 358px;
+  }
 }
 
 .backdrop {
