--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -5,12 +5,19 @@
     @extend .container;
     padding: 60px 15px;
   }
+  &__logo-address {
+    text-align: center;
+    margin-bottom: 60px;
+  }
   &__address {
     font-style: normal;
     color: var(--white);
   }
   &__social-media {
-    margin-left: 70px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 60px;
   }
   &__caption {
     @extend .caption;
@@ -18,6 +25,9 @@
     text-transform: uppercase;
     padding-top: 12px;
     margin-bottom: 20px;
+    &--centered {
+      text-align: center;
+    }
   }
   &__social-media-icons {
     @extend .list;
@@ -26,7 +36,6 @@
   &__subscription {
     display: flex;
     flex-direction: column;
-    margin-left: 93px;
   }
 }
 
@@ -74,10 +83,13 @@
 
 .subscription-form {
   display: flex;
+  flex-direction: column;
+  align-items: center;
 
   &__email-input-field {
-    width: 358px;
+    width: 100%;
     height: 50px;
+    margin-bottom: 20px;
     background-color: transparent;
     color: rgba(255, 255, 255, 0.6);
     font-size: 16px;
@@ -91,6 +103,53 @@
     &:focus {
       color: var(--white);
       border-color: var(--white);
+    }
+  }
+}
+@media screen and (min-width: $tablet) {
+  .footer {
+    &__container {
+      flex-direction: column;
+      align-items: center;
+    }
+    &__wrapper {
+      display: flex;
+      justify-content: space-around;
+      width: 100%;
+    }
+    &__subscription {
+      width: 450px;
+    }
+  }
+}
+
+@media screen and (min-width: $desktop) {
+  .footer {
+    &__container {
+      flex-direction: row;
+      align-items: flex-start;
+    }
+    &__wrapper {
+      width: initial;
+    }
+    &__logo-address {
+      text-align: initial;
+    }
+    &__social-media {
+      margin-left: 70px;
+      align-items: flex-start;
+    }
+    &__subscription {
+      margin-left: 93px;
+      align-items: flex-start;
+    }
+  }
+  .subscription-form {
+    flex-direction: row;
+    align-items: flex-start;
+
+    &__email-input-field {
+      width: 358px;
     }
   }
 }
