--- a/css/main.css
+++ b/css/main.css
@@ -809,17 +809,22 @@ img {
   font-size: 0;
 }
 
+.filters-list__item {
+  display: inline-block;
+  margin-bottom: 15px;
+}
+
 .project-thumbnails {
   display: flex;
   flex-wrap: wrap;
-  padding-top: 40px;
+  padding-top: 25px;
 }
 
-.project-thumbnails__item:not(:nth-child(3n)) {
-  margin-right: 30px;
+.project-thumbnails__item {
+  width: 100%;
 }
 
-.project-thumbnails__item:not(:nth-last-child(-n + 3)) {
+.project-thumbnails__item:not(:last-child) {
   margin-bottom: 30px;
 }
 
@@ -870,6 +875,34 @@ img {
 .thumbnail-link__project-name {
   font-size: 18px;
   line-height: 2;
+}
+
+.thumbnail-link__image {
+  width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+  .project-thumbnails__item {
+    width: calc(50% - 15px);
+  }
+  .project-thumbnails__item:not(:nth-child(2n)) {
+    margin-right: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .project-thumbnails__item {
+    width: initial;
+  }
+  .project-thumbnails__item:not(:nth-child(2n)) {
+    margin-right: initial;
+  }
+  .project-thumbnails__item:not(:nth-child(3n)) {
+    margin-right: 30px;
+  }
+  .project-thumbnails__item:not(:nth-last-child(-n + 3)) {
+    margin-bottom: 30px;
+  }
 }
 
 .footer {
