--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -16,6 +16,8 @@
 
   &__item {
     @extend .list-item;
+    display: inline-block;
+    margin-bottom: 15px;
   }
 }
 
@@ -23,13 +25,11 @@
   @extend .list;
   display: flex;
   flex-wrap: wrap;
-  padding-top: 40px;
+  padding-top: 25px;
 
   &__item {
-    &:not(:nth-child(3n)) {
-      margin-right: 30px;
-    }
-    &:not(:nth-last-child(-n + 3)) {
+    width: 100%;
+    &:not(:last-child) {
       margin-bottom: 30px;
     }
   }
@@ -79,5 +79,35 @@
     @extend .caption;
     font-size: 18px;
     line-height: 2;
+  }
+  &__image {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: $tablet) {
+  .project-thumbnails {
+    &__item {
+      width: calc(50% - 15px);
+      &:not(:nth-child(2n)) {
+        margin-right: 30px;
+      }
+    }
+  }
+}
+@media screen and (min-width: $desktop) {
+  .project-thumbnails {
+    &__item {
+      width: initial;
+      &:not(:nth-child(2n)) {
+        margin-right: initial;
+      }
+      &:not(:nth-child(3n)) {
+        margin-right: 30px;
+      }
+      &:not(:nth-last-child(-n + 3)) {
+        margin-bottom: 30px;
+      }
+    }
   }
 }
