--- a/css/main.css
+++ b/css/main.css
@@ -229,6 +229,10 @@ img {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.modal-btn--narrow {
+  padding: 10px 32px;
+}
+
 .modal-btn:hover, .modal-btn:focus {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
