--- a/sass/components/_atoms.scss
+++ b/sass/components/_atoms.scss
@@ -5,6 +5,10 @@
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
+  &--narrow {
+    padding: 10px 32px;
+  }
+
   &:hover,
   &:focus {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
